--- a/web/modules/custom/optafeeds/components/horizontal_results/template.html
+++ b/web/modules/custom/optafeeds/components/horizontal_results/template.html
@@ -39,8 +39,12 @@
                         </a>
                     </div>
                     <div v-else-if="channels[match.id]" class="tw-flex tw-justify-center">
-                        <div v-if="channels[match.id] === 'Win Sports' || channels[match.id] === 'Win Sports, Win Sports +' || channels[match.id] === 'Win Sports +, Win Sports'" class="channel-logo-win"></div>
-                        <div v-if="channels[match.id] === 'Win Sports +' || channels[match.id] === 'Win Sports +, Win Sports'  || channels[match.id] === 'Win Sports, Win Sports +'" class="channel-logo-win-plus"></div>
+                        <div v-for="channel in channels[match.id]">
+                            <div v-if="channel === 'Win Sports' || channel === 'WinSports'" class="channel-logo-win"></div>
+                            <div v-if="channel === 'Win Sports +' || channel === 'WinSports +' || channel === 'Win Sports+' || channel === 'WinSports+'" class="channel-logo-win-plus"></div>
+                            <div v-if="channel === 'Win Sports Online' || channel === 'WinSports Online'" class="channel-logo-win-online"></div>
+                            <div v-if="channel === 'Win Sports.co' || channel === 'WinSports.co'" class="channel-logo-win-co"></div>
+                        </div>
                     </div>
                     <div v-else class="tw-flex tw-justify-center">
                          <div class="channel-logo-win-plus"></div>
