--- a/web/themes/custom/tailwindcss/templates/layout/html.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/html.html.twig
@@ -39,6 +39,15 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37954209-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-37954209-1');
+    </script>
   </head>
   <body{{ attributes.addClass(body_classes) }}>
   <div class="loading">
