--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -97,3 +97,13 @@ article.id-3{
     }
   }
 }
+
+/*brackets*/
+#brackets {
+  .bk-16-8 {
+    .img-bk {
+      display: none;
+      position: absolute;
+    }
+  }
+}
