--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -107,3 +107,10 @@ article.id-3{
     }
   }
 }
+
+/*Temporal*/
+#block-contenidoprincipaldelapagina-3 {
+  div.quickedit-field {
+    display: none;
+  }
+}
