--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog.html.twig
@@ -28,14 +28,14 @@
         {% if node.hasField('field_lead') %}
             <div class="lead my-2 tw-text-lg italic mb-8">{{ content.field_lead }}</div>
         {% endif %}
-        {% if node.hasField('field_mediastream') %}
+        {% if node.hasField('field_mediastream') and node.field_mediastream.value %}
             {{ content.field_mediastream }}
         {% elseif node.field_url.uri %}
             {{ content.field_url }}
-        {% elseif node.hasField('field_image_h') %}
+        {% elseif (node.hasField('field_image_h') and node.field_image_h.0) %}
             <div class="tw-my-4">{{ content.field_image_h }}</div>
             <div class="tw-text-gray-650 tw-text-sm tw-mb-4">{{ node.field_image_h.title }}</div>
-        {% elseif node.hasField('field_image') %}
+        {% elseif (node.hasField('field_image') and node.field_image.0) %}
             <div class="tw-mt-4 tw-mb-2">{{ content.field_image }}</div>
             <div class="tw-text-primary tw-text-sm tw-mb-2">{{ node.field_image.title }}</div>
         {% endif %}
