--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -169,6 +169,7 @@
                 </div>
                 <div class="tw-pb-4">
                     Copyright© 2020, Bogotá - Colombia. Todos los derechos reservados.  Está prohibida la reproducción total o parcial de la página
+                    <br>Un producto de RCN TELEVISIÓN 2020
                 </div>
                 <div class="tw-text-secondary tw-pb-4 enlaces">
                     <a class="footer" href="/quienes-somos">Quiénes somos</a>
