update Manual de Procedimientos

--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -178,7 +178,7 @@
                     <a class="footer" href="/politica-de-cookies">Política de cookies</a>
                 </div>
                 <div class="tw-text-secondary tw-pb-4 tw-mb-16 md:tw-mb-0">
-                    <a class="footer" href="/sites/default/files/2020-03/manual_procedimiento_politica_y_tratamiento_de_la_informacion.pdf" target="_blank">Manual de Procedimientos y Políticas de Tratamiento de la Información</a>
+                    <a class="footer" href="/sites/default/files/pdf/manual_de_procedimientos_y _políticas_de_tratamiento_de_la_informacion_win_sports_S_A_S_2021.pdf" target="_blank">Manual de Procedimientos y Políticas de Tratamiento de la Información</a>
                 </div>
             </div>
         </div>
