--- a/web/modules/custom/mediastream_formatter/templates/mediastream.html.twig
+++ b/web/modules/custom/mediastream_formatter/templates/mediastream.html.twig
@@ -1,4 +1,4 @@
-<div id="mediastream-player-{{ mediastream_id }}" class="mediastream-player tw-bg-gray-650">
+<div id="mediastream-player-{{ mediastream_id }}" class="mediastream-player tw-bg-gray-650 {{autoplay}}">
     <div id="video-{{ mediastream_id }}" class="mb-4 lg:mb-0">
         <div class="image tw-relative tw-cursor-pointer" data-id="{{ mediastream_id }}">
             {{ image }}
