--- a/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
+++ b/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
@@ -40,6 +40,12 @@ body {
   word-wrap: break-word;
 }
 
+/* ---------- Spacing ----------- */
+.py-7{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 /* --- Links --- */
 
 a,
